--- a/style.css
+++ b/style.css
@@ -131,3 +131,14 @@ h2.text-center {
   font-weight: 600;
   margin-bottom: 1.5rem;
 }
+
+#funcao {
+    max-width: 250px; /* Um pouco menor em telas maiores */
+  }
+  
+  .md-col-span-2 {
+    grid-column: span 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centraliza o conteúdo */
+  }
